Changed layout.js to main.js

--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Challenge</title>
     <link rel="stylesheet" href="style.css" />
-    <script type="module" src="./script/layout.js"></script>
   </head>
-  <body></body>
+  <body>
+    <script type="module" src="./script/main.js"></script>
+  </body>
 </html>
