--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Challenge</title>
     <link rel="stylesheet" href="style.css" />
+    <script
+      src="https://kit.fontawesome.com/2d5ed696bf.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
   <body>
     <script type="module" src="./script/main.js"></script>
